# retrieval-observability-snapshot

./: README.md  SNAPSHOT_MANIFEST.md  pyproject.toml
configs/: docs_pilot_agopengps.yaml  docs_pilot_ansible_docs.yaml  docs_pilot_argo_cd_docs.yaml  docs_pilot_django_docs.yaml  docs_pilot_docker_docs.yaml  docs_pilot_elasticsearch_docs.yaml  docs_pilot_express_docs.yaml  docs_pilot_github_docs.yaml  docs_pilot_kubernetes_website_docs.yaml  docs_pilot_nextjs_docs.yaml  docs_pilot_python312.yaml  docs_pilot_pytorch_docs.yaml  docs_pilot_react_docs.yaml  docs_pilot_redis_docs.yaml  docs_pilot_vscode_docs.yaml  e001_llm_only_minidocs.yaml  e001b_local_no_context_minidocs.yaml  e007b_mock_minidocs.yaml  experiment.example.yaml  minilm_smoke.yaml
docs/: architecture.mmd  html_observability_report.md  incremental_baseline_refresh.md  manifest_lineage.md  paper_evidence_export.md  review_pilots.md
retrieval_arena/: __init__.py  audit.py  cli.py  commands.py  config.py  diagnostics.py  docker.py  drift.py  errors.py  evidence_export.py  git_provenance.py  harness.py  hashing.py  html_report.py  longitudinal_pilot.py  manifests.py  measurements.py  replay_compare.py  replay_manifests.py  reports.py  schemas.py  scoring.py  snapshot_diff.py  snapshots.py
studies/: __init__.py
tests/: _common_runner.py
unit_tests/: test_audit.py  test_commands.py  test_config.py  test_corpus_comparison.py  test_corpus_import.py  test_diagnostics.py  test_drift.py  test_git_provenance.py  test_harness.py  test_hashing.py  test_html_report.py  test_local_no_context_llm_e001b.py  (+14 more)
(+65 files in other folders)
